--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,11 @@
     "jsx": "preserve",
     "incremental": true
   },
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["./src/*"],
+    "~/*": ["./*"]
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
