--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/node": "17.0.31",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
+    "autoprefixer": "^10.4.7",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.13",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
 }
